# tictactoe

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/tictactoe/: tictactoe.py
